# Simbay

./: .gitignore  AGENTS.md  Dockerfile  MJDATA.TXT  MUJOCO_LOG.TXT  Makefile  README.mariana.md  README.md  compress.py  might_need.txt  old_mass_estimation.py  pyproject.toml  raycluster.yaml  requirments.txt  test_robot.py
models/: panda.xml  panda_nohand.xml  props2.xml  scene.xml  task_board_perfect.stl
models_old/: Task_Board_TBv2023_m3b.stl  fr3v2_hand.xml  props.xml  props2.xml  scene.xml
ros_ws/: franka.urdf
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/visft_ros2/share/visft_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/visft_ros2/share/visft_ros2/cmake/: visft_ros2Config.cmake
ros_ws/log/: latest_build
scripts/: forcas_externas.py  mass_estimation.py  pos_estimation_1D.py  pos_estimation_2D.py  pos_estimation_3DOF.py  real_pos_estimation_1D.py  real_pos_estimation_2D.py  warp_pos_estimation_2D.py
src/estimation/: __init__.py  container.py  measurement.py  motion.py  particle_filter.py
src/kinematics/: ik_solver.py  mujoco_ik.py
src/planning/: __init__.py  franka_solver.py  trajectory.py
src/robots/: base.py  mujoco_robot.py  real_robot.py  warp_mujoco_robot.py
src/skills/: __init__.py  click_button.py  grab_and_lift.py  move_to_home.py  real_sweep.py  sweep.py
src/utils/: __init__.py  constants.py  execution.py  mujoco_utils.py  sensors.py  visuals.py
src/warp_estimation/: warp_container.py  warp_motion.py  (+2 more)
(+845 files in other folders)
