[project]
name = "simbay"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)",
    "mujoco (>=3.8.1,<4.0.0)",
    "mujoco-warp (>=3.8.1,<4.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "ray[client] (>=2.55.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
